clusters/my-cluster/apps/flask/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flaskapp-dep

  labels:
    app: flaskapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp

  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      serviceAccountName: flaskapp-sa
      containers:
      - name: flaskapp-container
        image: mihalkapromzona/flaga:r1-2
        ports:
        - containerPort: 5000
