clusters/my-cluster/apps/flask/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  selector:
    app: flaskapp
  ports:
    - name: flask-port
      protocol: TCP
      port: 443
      targetPort: 5000
  type: ClusterIP
