clusters/my-cluster/apps/flask/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter-sub2.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskapp-service
                port:
                  number: 443
   tls:
    - hosts:
      - komplikter-sub2.servehttp.com
      secretName: tlss-prod-secret
